TEST_PROGRAMS/VALID/Inderjot_Ratol/greaternum.min
#greater of two numbers
var x: int;
var y: int;

x=40;
read y;
if x-y then
	print "x greater than y" ;
else
	print ("y greater than x");
endif
