TEST_PROGRAMS/INVALID/theo_szymkowiak/invalid4.min
# WILL FAIL BECAUSE MISSING 'endif' (used 'done' instead)

var x: int;

x = 1;

if x then
  print "test";
done

